WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
259822
[GTK] clang warning fix for DrawingAreaCoordinatedGraphics
https://bugs.webkit.org/show_bug.cgi?id=259822
Summary
[GTK] clang warning fix for DrawingAreaCoordinatedGraphics
Philippe Normand
Reported
2023-08-04 03:16:45 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2023-08-04 03:19:57 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/16389
EWS
Comment 2
2023-08-04 04:11:04 PDT
Committed
266578@main
(f9e74ee3b6cd): <
https://commits.webkit.org/266578@main
> Reviewed commits have been landed. Closing PR #16389 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug