[GTK] clang warning fix for DrawingAreaCoordinatedGraphics https://bugs.webkit.org/show_bug.cgi?id=259822

Unreviewed, the forceUpdate method is virtual in the DrawingArea class and should be marked as
override in the sub-class.

* Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/DrawingAreaCoordinatedGraphics.h:

Canonical link: https://commits.webkit.org/266578@main